--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint --ext .ts,.tsx,.vue,.js,.jsx src --fix"
   },
   "dependencies": {
     "vue": "^3.2.47"
   },
   "devDependencies": {
+    "@mistjs/eslint-config-vue": "^0.0.5",
     "@vitejs/plugin-vue": "^4.1.0",
+    "eslint": "^8.39.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
     "vue-tsc": "^1.2.0"
