--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "prepare": "husky install",
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
@@ -16,6 +17,7 @@
     "@mistjs/eslint-config-vue": "^0.0.5",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.39.0",
+    "husky": "^8.0.3",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
     "vue-tsc": "^1.2.0"
