--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview",
     "lint": "eslint --ext .ts,.tsx,.vue,.js,.jsx src --fix"
   },
+  "lint-staged": {
+    "*.{js,tsx,vue,ts,jsx}": "eslint --fix"
+  },
   "dependencies": {
     "vue": "^3.2.47"
   },
@@ -18,6 +21,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
+    "lint-staged": "^13.2.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
     "vue-tsc": "^1.2.0"
