--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@mistjs/eslint-config-vue": "^0.0.5",
+    "@types/node": "^18.16.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
