--- a/package.json
+++ b/package.json
@@ -20,10 +20,13 @@
     "@mistjs/eslint-config-vue": "^0.0.5",
     "@types/node": "^18.16.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/runtime-core": "^3.2.47",
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "typescript": "^5.0.2",
+    "unplugin-auto-import": "^0.15.3",
+    "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.0",
     "vue-tsc": "^1.2.0"
   }
