feat: add pinia

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,10 +22,10 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     /* Path */
-    "baseUrl": "./",
+    "baseUrl": ".",
     "paths": {
       "~/*": [
-        "./src/*"
+        "src/*"
       ]
     }
   },
