--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "*.{js,tsx,vue,ts,jsx}": "eslint --fix"
   },
   "dependencies": {
+    "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
