--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
+    "naive-ui": "^2.34.3",
     "typescript": "^5.0.2",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
