--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@mistjs/eslint-config-vue": "^0.0.5",
     "@types/node": "^18.16.0",
+    "@unocss/reset": "^0.51.8",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/runtime-core": "^3.2.47",
     "eslint": "^8.39.0",
@@ -28,6 +29,7 @@
     "lint-staged": "^13.2.1",
     "naive-ui": "^2.34.3",
     "typescript": "^5.0.2",
+    "unocss": "^0.51.8",
     "unplugin-auto-import": "^0.15.3",
     "unplugin-vue-components": "^0.24.1",
     "vite": "^4.3.0",
