--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "naive-admin-pro",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
     "prepare": "husky install",
@@ -14,6 +14,7 @@
     "*.{js,tsx,vue,ts,jsx}": "eslint --fix"
   },
   "dependencies": {
+    "@vueuse/core": "^10.1.0",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
