--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@mistjs/eslint-config-vue": "^0.0.5",
     "@types/node": "^18.16.0",
     "@unocss/reset": "^0.51.8",
+    "@vicons/antd": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
     "@vue/runtime-core": "^3.2.47",
     "eslint": "^8.39.0",
