--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "devDependencies": {
     "@mistjs/eslint-config-vue": "^0.0.5",
+    "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.0",
     "@unocss/reset": "^0.51.8",
     "@vicons/antd": "^0.12.0",
@@ -29,6 +30,7 @@
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
+    "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.3",
     "typescript": "^5.0.2",
     "unocss": "^0.51.8",
