--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@vueuse/core": "^10.1.0",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
+    "vue-i18n": "9.3.0-beta.17",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
