--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@vueuse/core": "^10.1.0",
+    "axios": "^1.4.0",
     "pinia": "^2.0.35",
     "vue": "^3.2.47",
     "vue-i18n": "9.3.0-beta.17",
