--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,10 @@
     "paths": {
       "~/*": [
         "src/*"
-      ]
+      ],
+      "@/*": [
+        "src/*"
+      ],
     },
     /* Type */
     "types": [
