--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@unocss/reset": "^0.51.8",
     "@vicons/antd": "^0.12.0",
     "@vitejs/plugin-vue": "^4.1.0",
+    "@vitejs/plugin-vue-jsx": "^3.0.1",
     "@vue/runtime-core": "^3.2.47",
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
