--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@mistjs/eslint-config-vue": "^0.0.5",
+    "@mistjs/eslint-config-vue-jsx": "^0.0.7",
     "@types/lodash-es": "^4.17.7",
     "@types/node": "^18.16.0",
     "@unocss/reset": "^0.51.8",
