chore: add prettier

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "lint-staged": "^13.2.1",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.3",
+    "prettier": "^2.8.8",
     "typescript": "^5.0.2",
     "unocss": "^0.51.8",
     "unplugin-auto-import": "^0.15.3",
