--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@vue/runtime-core": "^3.2.47",
     "eslint": "^8.39.0",
     "husky": "^8.0.3",
+    "less": "^4.1.3",
     "lint-staged": "^13.2.1",
     "lodash-es": "^4.17.21",
     "naive-ui": "^2.34.3",
